<resources>
    <string name="app_name">WearMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_simple_notification">Simple Notification</string>
    <string name="title_activity_notification_interaction">NotificationInteractionActivity</string>
    <string name="action_action_button_notification">Action Button notifications</string>
    <string name="action_wearable_action_notification">Wearable Actions notifications</string>
    <string name="action_wearable_feature_notification">Wearable Feature notifications</string>
    <string name="action_big_view_notification">Big View notifications</string>
    <string name="action_voice_interaction_notification">Voice interaction Notification</string>
    <string name="title_activity_simple_notifications">Simple notifications</string>
    <string name="title_activity_voice_notifications">Voice notifications</string>
    <string name="action_voice_only_notification">Voice only interaction</string>
    <string name="action_voice_text_notification">Voice and Text interaction</string>
    <string name="action_paged_notifications">Paged Notifications</string>
    <string name="action_stacked_notifications">Stacked Notifications</string>
    <string name="lbl_drawer_notifications">Notifications</string>
    <string name="title_activity_paged_notifications">Paged Notifications</string>
    <string name="title_activity_stacked_notifications">Stacked Notifications</string>
    <string name="hont_stacked_notifications">Clicking multiple times on the button bellow will generate stacked notifications</string>
    <string name="sample_notification_message">Notification created at %s</string>


    <string-array name="reply_choices">
        <item>pewny god</item>
        <item>Whomever shall be worthy</item>
        <item>Shall posses the power of Thor</item>
    </string-array>
</resources>
